-- INPUT:
def $really_fire_abort() => leave.get_me_outta_here(10, "foo");
def $fire_abort() => $really_fire_abort();
do $fire_abort();
-- OUTPUT:
--- backtrace ---
- leave.get_me_outta_here(10, "foo")
- :really_fire_abort()
- :fire_abort()
Error: %<condition: Signal(escape)>
-- END

-- INPUT:
def $fail_builtin() => (@core:Array.new(1))[100];
do $fail_builtin();
-- OUTPUT:
--- backtrace ---
- leave.out_of_bounds(100)
- [null][100]
- :fail_builtin()
Error: %<condition: Signal(escape)>
-- END

-- INPUT:
def $leave_plain_ensure() => try null ensure leave.outer();
do $leave_plain_ensure();
-- OUTPUT:
--- backtrace ---
- leave.outer()
- ensure
- :leave_plain_ensure()
Error: %<condition: Signal(escape)>
-- END
