-- INPUT:
import $assert;
do $assert:that(true);
-- OUTPUT:
-- END

-- INPUT:
import $assert;
do $assert:that(false);
-- OUTPUT:
--- backtrace ---
- ctrino.get_current_backtrace()
- :fail()
- :that(false)
Error: @ctrino.fail()
-- END

-- INPUT:
import $assert;
do $assert:equals(1, 1);
-- OUTPUT:
-- END

-- INPUT:
import $assert;
do $assert:equals(1, 2);
-- OUTPUT:
--- backtrace ---
- ctrino.get_current_backtrace()
- :fail()
- :that(false)
- :equals(1, 2)
Error: @ctrino.fail()
-- END
