-- INPUT:
import $assert;
do $assert:that(true);
-- OUTPUT:
-- END

-- INPUT:
import $assert;
do $assert:that(false);
-- OUTPUT:
--- backtrace ---
- leave.assert_failed()
- :fail()
- :that(false)
Error: %<condition: Signal(escape)>
-- END

-- INPUT:
import $assert;
do $assert:equals(1, 1);
-- OUTPUT:
-- END

-- INPUT:
import $assert;
do $assert:equals(1, 2);
-- OUTPUT:
--- backtrace ---
- leave.assert_failed()
- :fail()
- :that(false)
- :equals(1, 2)
Error: %<condition: Signal(escape)>
-- END
