-- INPUT:
def $myfun($x) => "[" + $x + "]";
entry_point $myfun("-").print_raw();
-- OUTPUT:
[-]
-- END


-- INPUT:
def $foo($x) => "[" + $x + "]";
def $bar($x) => "{" + $x + "}";
entry_point $foo($bar("X")).print_raw();
-- OUTPUT:
[{X}]
-- END


-- INPUT:
def $foo($x) => "<" + $x + ">";
def $foo($x == "y") => "{" + $x + "}";
entry_point {
  $foo("x").print_raw();
  $foo("y").print_raw();
  $foo("z").print_raw();
}
-- OUTPUT:
<x>
{y}
<z>
-- END


-- INPUT:
def $foo($x) => "<" + $x + ">";
def $foo($x, $y) => "{" + $x + ", " + $y + "}";
entry_point {
  $foo("x").print_raw();
  $foo("y", "z").print_raw();
}
-- OUTPUT:
<x>
{y, z}
-- END
