-- INPUT:
def $myfun($x) => "[" + $x + "]";
do $myfun("-").print_raw();
-- OUTPUT:
[-]
-- END


-- INPUT:
def $foo($x) => "[" + $x + "]";
def $bar($x) => "{" + $x + "}";
do $foo($bar("X")).print_raw();
-- OUTPUT:
[{X}]
-- END


-- INPUT:
def $foo($x) => "<" + $x + ">";
def $foo($x == "y") => "{" + $x + "}";
do {
  $foo("x").print_raw();
  $foo("y").print_raw();
  $foo("z").print_raw();
}
-- OUTPUT:
<x>
{y}
<z>
-- END


-- INPUT:
def $foo($x) => "<" + $x + ">";
def $foo($x, $y) => "{" + $x + ", " + $y + "}";
do {
  $foo("x").print_raw();
  $foo("y", "z").print_raw();
}
-- OUTPUT:
<x>
{y, z}
-- END
