-- INPUT:
def ($this).get_some_value() => "foo";
entry_point "blah".get_some_value().print();
-- OUTPUT:
"foo"
-- END

-- INPUT:
def ($this).id() => $this;
entry_point "blah".id().print();
-- OUTPUT:
"blah"
-- END

-- INPUT:
def ($this).first($a) => $a;
entry_point "blah".first(4).print();
-- OUTPUT:
4
-- END

-- INPUT:
def ($this).first($a, $b) => $a;
entry_point "blah".first(5, 6).print();
-- OUTPUT:
5
-- END

-- INPUT:
def ($this).second($a, $b) => $b;
entry_point "blah".second(7, 8).print();
-- OUTPUT:
8
-- END

-- INPUT:
def ($this).foo() => "foo";
def ($this).bar() => "bar";
entry_point "blah".foo().print();
-- OUTPUT:
"foo"
-- END

-- INPUT:
def ($this).foo() => "foo";
def ($this).bar() => "bar";
entry_point "blah".bar().print();
-- OUTPUT:
"bar"
-- END

-- INPUT:
def ($this).foo() => 4;
def ($this == 8).foo() => 5;
entry_point (7).foo().print();
-- OUTPUT:
4
-- END

-- INPUT:
def ($this).foo() => 4;
def ($this == 8).foo() => 5;
entry_point (8).foo().print();
-- OUTPUT:
5
-- END

-- INPUT:
def ($this).foo() => 4;
def ($this == 8).foo() => 5;
entry_point (9).foo().print();
-- OUTPUT:
4
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
entry_point (9).foo(6).print();
-- OUTPUT:
6
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
def ($this).foo($bar == 18) => $bar + 5;
entry_point (1).foo(17).print();
-- OUTPUT:
17
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
def ($this).foo($bar == 18) => $bar + 5;
entry_point (1).foo(18).print();
-- OUTPUT:
23
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
def ($this).foo($bar == 18) => $bar + 5;
entry_point (1).foo(19).print();
-- OUTPUT:
19
-- END

-- INPUT:
def @This := @pytrino:new_protocol("This");
def ($this).foo() => 6;
def ($this is @This).foo() => 7;
entry_point (1).foo().print();
-- OUTPUT:
6
-- END

-- INPUT:
def @This := @pytrino:new_protocol("This");
def @obj := @pytrino:new_instance(@This);
def ($this).foo() => 6;
def ($this is @This).foo() => 7;
entry_point @obj.foo().print();
-- OUTPUT:
7
-- END
