-- INPUT:
def ($this).get_some_value() => "foo";
do "blah".get_some_value().print_raw();
-- OUTPUT:
foo
-- END

-- INPUT:
def ($this).id() => $this;
do "blah".id().print_raw();
-- OUTPUT:
blah
-- END

-- INPUT:
def ($this).first($a) => $a;
do "blah".first(4).print();
-- OUTPUT:
4
-- END

-- INPUT:
def ($this).first($a, $b) => $a;
do "blah".first(5, 6).print();
-- OUTPUT:
5
-- END

-- INPUT:
def ($this).second($a, $b) => $b;
do "blah".second(7, 8).print();
-- OUTPUT:
8
-- END

-- INPUT:
def ($this).foo() => "foo";
def ($this).bar() => "bar";
do {
  "blah".foo().print_raw();
  "blah".bar().print_raw();
}
-- OUTPUT:
foo
bar
-- END

-- INPUT:
def ($this).foo() => 4;
def ($this == 8).foo() => 5;
do {
  (7).foo().print();
  (8).foo().print();
  (9).foo().print();
}
-- OUTPUT:
4
5
4
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
do (9).foo(6).print();
-- OUTPUT:
6
-- END

-- INPUT:
def ($this).foo($bar) => $bar;
def ($this).foo($bar == 18) => $bar + 5;
do {
  (1).foo(17).print();
  (1).foo(18).print();
  (1).foo(19).print();
}
-- OUTPUT:
17
23
19
-- END

-- INPUT:
def @This := module.new_type("This");
def @obj := @ctrino.new_instance_manager(null).new_instance(@This);
def ($this).foo() => 6;
def ($this is @This).foo() => 7;
do {
  (1).foo().print();
  @obj.foo().print();
}
-- OUTPUT:
6
7
-- END
