# Really basic literal expressions.

INPUT: 1
EXPECT: 1

INPUT: []
EXPECT: []

INPUT: [1]
EXPECT: [1]

INPUT: [1, 2]
EXPECT: [1, 2]

INPUT: [1, 2, 3]
EXPECT: [1, 2, 3]

INPUT: [1, 2, [3]]
EXPECT: [1, 2, #<array[1]>]

INPUT: ""
EXPECT: ""

INPUT: "foo"
EXPECT: "foo"

INPUT: null
EXPECT: null

INPUT: true
EXPECT: true

INPUT: false
EXPECT: false

INPUT: 1 + 1
EXPECT: 2

INPUT: 5 - 2
EXPECT: 3

INPUT: 1 + 1 + 1
EXPECT: 3

INPUT: "(" + "foo" + ", " + "bar" + ")"
EXPECT: "(foo, bar)"
