# Really basic literal expressions.

INPUT: 1
VALUE: 1

INPUT: []
VALUE: []

INPUT: [1]
VALUE: [1]

INPUT: [1, 2]
VALUE: [1, 2]

INPUT: [1, 2, 3]
VALUE: [1, 2, 3]

INPUT: [1, 2, [3]]
VALUE: [1, 2, #<array[1]>]

INPUT: ""
VALUE: ""

INPUT: "foo"
VALUE: "foo"

INPUT: null
VALUE: null

INPUT: true
VALUE: true

INPUT: false
VALUE: false


# Sequences

INPUT: {}
VALUE: null

INPUT: {1;}
VALUE: 1

INPUT: {1; 2;}
VALUE: 2

INPUT: {1; 2; 3; 4; 5; 6; 7; 8;}
VALUE: 8

INPUT: {8; {7; {6; {5; 4;} 3;} 2;} 1;}
VALUE: 1
