-- INPUT:
def $x := 4;
do $x.print();
-- OUTPUT:
4
-- END


-- INPUT:
def @x := 8;
do @x.print();
-- OUTPUT:
8
-- END


-- INPUT:
def @x := 12;
def $y := @x;
do ($y).print();
-- OUTPUT:
12
-- END


-- INPUT:
def @x := 16;
do ((fn ($y) => (@x + $y))(3)).print();
-- OUTPUT:
19
-- END


-- INPUT:
def @@ppx := 12;
def @@ppy := @@ppx + 1;
def @@ppz := @@ppy + 2;
def @px := @@ppx + 3;
def @py := @px + 4;
def @pz := @py + 5;
def $x := @px + 6;
def $y := $x + 7;
def $z := $y + 8;
do {
  @@ppx.print();
  @@ppy.print();
  @@ppz.print();
  @px.print();
  @py.print();
  @pz.print();
  $x.print();
  $y.print();
  $z.print();
}
-- OUTPUT:
12
13
15
15
19
24
21
28
36
-- END


-- INPUT:
def @@x := 12;
def @@y := 13;
def @@z := 14;
def @x := 15;
def @y := 16;
def @z := 17;
def $x := 18;
def $y := 19;
def $z := 20;
do {
  @@x.print();
  @@y.print();
  @@z.print();
  @x.print();
  @y.print();
  @z.print();
  $x.print();
  $y.print();
  $z.print();
}
-- OUTPUT:
12
13
14
15
16
17
18
19
20
-- END


-- INPUT:
def $x := @x + "a";
def $y := @y + "b";
def $z := @z + "c";
def @x := @@x + "d";
def @y := @@y + "e";
def @z := @@z + "f";
def @@x := "g";
def @@y := "h";
def @@z := "i";
do {
  @@x.print_raw();
  @@y.print_raw();
  @@z.print_raw();
  @x.print_raw();
  @y.print_raw();
  @z.print_raw();
  $x.print_raw();
  $y.print_raw();
  $z.print_raw();
}
-- OUTPUT:
g
h
i
gd
he
if
gda
heb
ifc
-- END


-- INPUT:
def $a := @b;
def @b := @@c;
def @@c := @@@d;
def @@@d := 8;
do {
  $a.print();
  @b.print();
  @@c.print();
  @@@d.print();
}
-- OUTPUT:
8
8
8
8
-- END


-- INPUT:
def @@ppx := 12;
def @@ppy := @@ppx + 1;
def @@ppz := @@ppy + 2;
do {
  @@ppx.print();
  @@ppy.print();
  @@ppz.print();
  @ppx.print();
  @ppy.print();
  @ppz.print();
  $ppx.print();
  $ppy.print();
  $ppz.print();
}
-- OUTPUT:
12
13
15
12
13
15
12
13
15
-- END
